{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 1,
  "lineage": "953488d6-b512-5275-0ec7-30717c83f5dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586393922090:security-group/sg-0ce77b487359761f8",
            "description": "Control bastion inbound and outbound access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.10.0/24",
                  "10.1.11.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0ce77b487359761f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hvwd-default-bastion",
            "name_prefix": null,
            "owner_id": "586393922090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Owner": "rachamallavarun1995@gmail.com",
              "Project": "HawkVisum_Website_Dockerised"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7e59bf9ac8f6c3d"
          },
          "dependencies": [
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586393922090:security-group/sg-06b74e6d4f2f276f5",
            "description": "Access for the ECS Service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.1.10.0/24",
                  "10.1.11.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-06b74e6d4f2f276f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "hvwd-default-ecs-service",
            "name_prefix": null,
            "owner_id": "586393922090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Owner": "rachamallavarun1995@gmail.com",
              "Project": "HawkVisum_Website_Dockerised"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7e59bf9ac8f6c3d"
          },
          "dependencies": [
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586393922090:security-group/sg-0d7adc633a2f5cd6e",
            "description": "Allow access to the RDS database instance",
            "egress": [],
            "id": "sg-0d7adc633a2f5cd6e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b74e6d4f2f276f5",
                  "sg-0ce77b487359761f8"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "hvwd-default-rds-inbound-access",
            "name_prefix": null,
            "owner_id": "586393922090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Owner": "rachamallavarun1995@gmail.com",
              "Project": "HawkVisum_Website_Dockerised"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7e59bf9ac8f6c3d"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.ecs_service",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586393922090:subnet/subnet-09cf6993a8db6a577",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.10.0/24",
            "id": "subnet-09cf6993a8db6a577",
            "map_public_ip_on_launch": false,
            "owner_id": "586393922090",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "hvwd-default-private-a",
              "Owner": "rachamallavarun1995@gmail.com",
              "Project": "HawkVisum_Website_Dockerised"
            },
            "vpc_id": "vpc-0a7e59bf9ac8f6c3d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586393922090:subnet/subnet-0277b1d224e0e15ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.11.0/24",
            "id": "subnet-0277b1d224e0e15ca",
            "map_public_ip_on_launch": false,
            "owner_id": "586393922090",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "hvwd-default-private-b",
              "Owner": "rachamallavarun1995@gmail.com",
              "Project": "HawkVisum_Website_Dockerised"
            },
            "vpc_id": "vpc-0a7e59bf9ac8f6c3d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586393922090:vpc/vpc-0a7e59bf9ac8f6c3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05f4b57980649d90a",
            "default_route_table_id": "rtb-01d48ce5b4cba309e",
            "default_security_group_id": "sg-069350088b5925f0a",
            "dhcp_options_id": "dopt-42ced638",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a7e59bf9ac8f6c3d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01d48ce5b4cba309e",
            "owner_id": "586393922090",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "hvwd-default-vpc",
              "Owner": "rachamallavarun1995@gmail.com",
              "Project": "HawkVisum_Website_Dockerised"
            }
          }
        }
      ]
    }
  ]
}